<resources>
    <string name="app_name">SPORT MATCH</string>
    <string name="email">Email</string>
    <string name="usuario">Usuário</string>
    <string name="login">Login</string>
    <string name="criar_usuario">Criar Usuário</string>
    <string name="nome">Nome</string>
    <string name="senha">Senha</string>
    <string name="telefone">Telefone</string>
    <string name="menu">Menu</string>
    <string name="categorias">Categorias</string>
    <string name="mural">Mural</string>
    <string name="postar_mural">Postar Mural</string>
    <string name="data">Data</string>
    <string name="horarioInicio">Horário Inicio</string>
    <string name="horarioFinal">Horário Fim</string>
    <string name="local">Local</string>
    <string name="perfil">Perfil</string>
    <string name="sobre">SOBRE</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="futebol">FUTEBOL</string>
    <string name="volei">VOLEI</string>
    <string name="basquete">BASQUETE</string>
    <string name="tenis">TENIS</string>
    <string name="trilha">TRILHA</string>
    <string name="rugby">RUGBY</string>
    <string name="skate">SKATE</string>
    <string name="kart">KART</string>
    <string name="ftec">FTec @2022</string>
    <string name="sair">Sair</string>
    <string name="conversar">Conversar</string>
    
    <string-array name="spn_categorias">
        <item>Selecione...</item>
        <item>Futebol</item>
        <item>Volêi</item>
        <item>Basquete</item>
        <item>Tênis</item>
        <item>Trilha</item>
        <item>Rugby</item>
        <item>Skate</item>
        <item>Kart</item>
    </string-array>
</resources>