<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#34d872"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textAlignment="viewEnd"
                />

            <ImageButton
                android:id="@+id/btn_conversar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="100dp"
                android:src="@drawable/conversar"
                android:scaleType="centerCrop"
                android:background="#34d872"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:background="#34d872"/>




        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="40dp">


            <ImageButton
                android:id="@+id/btn_categorias"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/categorias"
                android:scaleType="centerInside"
                android:src="@drawable/categorias"

                />

            <ImageButton
                android:id="@+id/btn_mural"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginStart="50dp"
                android:backgroundTint="@color/white"
                android:scaleType="centerInside"
                android:contentDescription="@string/mural"
                android:src="@drawable/mural" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="75dp">

            <ImageButton
                android:id="@+id/btn_perfil"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:backgroundTint="@color/white"
                android:scaleType="centerCrop"
                android:contentDescription="@string/perfil"
                android:src="@drawable/perfil"
                />

            <ImageButton
                android:id="@+id/btn_sair"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginStart="50dp"
                android:scaleType="centerCrop"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/sair"
                android:src="@drawable/logout"
                />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ftec"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/black"
                android:textStyle="italic"
                />



        </LinearLayout>




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>