<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PostarMural">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:background="#4eec84"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/postar_mural"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:background="#4eec84"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="80dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categorias"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spn_escolherCat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="date" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horarioInicio"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_horarioInicio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/horarioFinal"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_horarioFim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="time" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/local"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/et_local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

            <Button
                android:id="@+id/btn_salvar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="#4eec84"
                android:text="Salvar"
                android:textColor="@color/black" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>