<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditarPerfil"
    android:background="@color/gray">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:background="@color/gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/editar_perfil"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:background="@color/white"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="100dp"
                android:src="@drawable/perfil"
                android:scaleType="fitCenter"
                android:scaleX="0.75"
                android:scaleY="0.75">
            </ImageView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">

            <Button
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="Mudar Foto"
                android:textColor="@color/black" />

            <Button
                android:layout_width="175dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:backgroundTint="@color/white"
                android:text="Excluir Foto"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sobre"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:backgroundTint="@color/black"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/categorias"
                android:textSize="20dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/categorias"
                />
            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/categorias"/>

            <ImageView
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/categorias"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:src="@drawable/adiciona"
                android:scaleType="fitCenter"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/white"
                android:text="Salvar"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="25sp"
                />

        </LinearLayout>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>